--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -48,3 +48,11 @@
  /* .carousel-card:nth-child(8){
     margin-right: 5vw;
  }   */
+
+ .heading{
+  text-align: center;
+  margin: 2rem;
+ }
+ .heading h1{
+  font-size: 3rem;
+ }
