--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -30,6 +30,6 @@
   width: 40vw;
   height: 80vh;
   position: relative;
-  background-color: white;
+  background-color: black;
   margin-left: 10vw;
 }
