--- a/src/styles/Person.css
+++ b/src/styles/Person.css
@@ -34,7 +34,7 @@
   resize: both;
 }
 
-.content {
+.person-content {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -50,7 +50,7 @@
   transition: 0.5s ease-in-out;
 }
 
-.content h2 {
+.person-content h2 {
   display: block;
   font-size: 2rem;
   color: #111;
@@ -59,7 +59,7 @@
   letter-spacing: 1px;
 }
 
-.content span {
+.person-content span {
   color: #555;
   font-size: 1.4rem;
   font-weight: 300;
@@ -67,7 +67,7 @@
 }
 
 @media (max-width: 600px) {
-  .container .box:hover .content {
+  .container .box:hover .person-content {
     transform: translate(0, 3.5rem);
   }
   .container .box:hover .imgBox {
