--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -63,7 +63,7 @@
 canvas {
   width: 100%;
   height: 100%;
-  background-color: black;
+  background: url("/public/assets/stars-1837306_1280.jpg") ;
 }
 
 .typing-effect::after {
