--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -63,7 +63,8 @@
 canvas {
   width: 100%;
   height: 100%;
-  background: url("/public/assets/stars-1837306_1280.jpg") ;
+  background: url("/public/assets/stars-1837306_1280.jpg") no-repeat;
+  background-size: cover;
 }
 
 .typing-effect::after {
