--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -10,17 +10,16 @@
 }
 
 .hero-heading {
-  margin: 2rem;
   position: absolute;
+  width: 100%;
   top: 1rem;
-  left: 2rem;
   align-content: center;
+  text-align: center;
   z-index: 10; /* Keep text above the model when zoomed out */
-  padding-left: 20%;
 }
 
 .hero-heading h1 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 700;
   
 }
