--- a/src/styles/Campus.css
+++ b/src/styles/Campus.css
@@ -135,21 +135,17 @@ body{
 
 .Campus-glass-overlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
-  backdrop-filter: blur(10px); /* Glass effect */
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.3); /* Light border */
-  color: white;
-  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30%; 
   padding: 20px;
+  background: rgba(255, 255, 255, 0.15); 
+  backdrop-filter: blur(10px); 
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.3); 
+  text-align: center;
+  color: white;
 }
 
 .Campus-glass-overlay > h1 {
