--- a/src/styles/Campus.css
+++ b/src/styles/Campus.css
@@ -92,7 +92,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    /* border-radius: 8px; */
+    border-radius: 8px;
     padding-left: 50px; 
     
   }
@@ -167,7 +167,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* border-radius: 8px; */
+    border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
