--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,41 +1,57 @@
 .hero {
   display: flex;
-  justify-content: space-between; /* Keeps text on the left and model on the right */
+  justify-content: space-between;
+  /* Keeps text on the left and model on the right */
   align-items: center;
-  flex-direction: row; /* Horizontal layout */
+  flex-direction: row;
+  /* Horizontal layout */
   width: 100vw;
-  height: 100vh; /* Full viewport height */
-  overflow: hidden; /* Allows model to cover text when zoomed */
+  height: 100vh;
+  /* Full viewport height */
+  overflow: hidden;
+  /* Allows model to cover text when zoomed */
   position: relative;
 }
 
 .hero-heading {
   position: absolute;
   width: 100%;
-  top: 1rem;
+  top: 4rem;
   align-content: center;
   text-align: center;
-  z-index: 10; /* Keep text above the model when zoomed out */
+  z-index: 10;
+  /* Keep text above the model when zoomed out */
+  /* text-shadow: 2px 5px 6px rgba(255, 255, 255, 0.6); */
 }
 
 .hero-heading h1 {
   font-size: 3.5rem;
   font-weight: 700;
-  
+
 }
 
 .hero-content {
   display: flex;
-  justify-content: space-between; /* Text on left, model on right */
+  justify-content: space-between;
+  /* Text on left, model on right */
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
 .hero-left {
-  width: 40%; /* Allocate 40% of the width to text */
-  padding-left: 5vw;
-  z-index: 10; /* Keep text above the model when zoomed out */
+  width: 20%;
+  /* Allocate 40% of the width to text */
+  margin-left: 5vw;
+  z-index: 10;
+  /* Keep text above the model when zoomed out */
+  padding: 2rem;
+  background: rgba(255, 255, 255, 0.07);
+  box-shadow: 0 8px 32px 0 rgba(197, 197, 197, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .hero-left h1 {
@@ -53,16 +69,20 @@
 }
 
 .hero-right {
-  width: 100%; /* Allocate 60% of the width to model */
+  width: 100%;
+  /* Allocate 60% of the width to model */
   height: 100vh;
   position: absolute;
-  z-index: 5; /* Lower z-index so model covers text when zoomed in */
+  z-index: 5;
+  /* Lower z-index so model covers text when zoomed in */
 }
 
 canvas {
   width: 100%;
   height: 100%;
-  background: url("/assets/milky-way-5905903.jpg") no-repeat;
+  background: url("/assets/pexels-apasaric-1694000.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -76,9 +96,11 @@ canvas {
   0% {
     opacity: 1;
   }
+
   50% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
