--- a/src/styles/Campus.css
+++ b/src/styles/Campus.css
@@ -182,6 +182,7 @@ body{
   
   .Campus-apply-btn {
     margin-top: 20px;
+    margin-left: 40%;
     width: 120px;
     height: 40px;
     background-color: blueviolet;
