--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -71,7 +71,7 @@
   
   body {
     min-height: 100vh;
-    background-color: #1d2630;
+    background-color: black;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
