--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -1,26 +1,36 @@
-.guest{
+.guest {
+    padding-top: 7%;
     background-color: black;
     color: #B026FF;
     text-align: center;
+    background: url("/assets/pexels-apasaric-1694000.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
-.chief-guest-header{
+
+.chief-guest-header {
     text-align: center;
-    font-size: max(1.5vw,20px);
+    font-size: max(1.5vw, 20px);
     padding: 2rem;
 }
-.chief-guest-body{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.judge-header{
-    text-align: center;
-    font-size: max(1.5vw,20px);
-    padding: 2rem;
-}
-.judge-body{
+
+.chief-guest-body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
+.judge-header {
+    text-align: center;
+    font-size: max(1.5vw, 20px);
+    padding: 2rem;
+    margin-top: 2rem;
+}
+
+.judge-body {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
