--- a/src/styles/Sponser.css
+++ b/src/styles/Sponser.css
@@ -1,25 +1,36 @@
-.sponser{
+.sponser {
     background-color: black;
     color: #B026FF;
     text-align: center;
+    padding-top: 8%;
+    background: url("/assets/pexels-apasaric-1694000.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.sponser-header{
+
+.sponser-header {
+    
     text-align: center;
-    font-size: max(1.5vw,20px);
+    font-size: max(1.5vw, 20px);
     padding: 2rem;
 }
-.sponser-body{
+
+.sponser-body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 }
-section{
+
+section {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin:2rem auto;
+    margin: 2rem auto;
 }
-.heading{
+
+.heading {
+    font-size: 2rem;
     margin: 1.5rem 0;
 }
