--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -9,7 +9,6 @@
   height: 100vh;
   /* Full viewport height */
   overflow: hidden;
-  /* Allows model to cover text when zoomed */
   position: relative;
 }
 
@@ -17,34 +16,28 @@
   position: absolute;
   width: 100%;
   top: 4rem;
-  align-content: center;
   text-align: center;
   z-index: 10;
-  /* Keep text above the model when zoomed out */
-  /* text-shadow: 2px 5px 6px rgba(255, 255, 255, 0.6); */
 }
 
 .hero-heading h1 {
   font-size: 3.5rem;
   font-weight: 700;
-
 }
 
 .hero-content {
   display: flex;
   justify-content: space-between;
-  /* Text on left, model on right */
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
 .hero-left {
-  width: 20%;
-  /* Allocate 40% of the width to text */
+  width: 30%;
+  /* Allocate 30% of the width to text */
   margin-left: 9vw;
   z-index: 10;
-  /* Keep text above the model when zoomed out */
   padding: 2rem;
   background: rgba(255, 255, 255, 0.07);
   box-shadow: 0 8px 32px 0 rgba(197, 197, 197, 0.37);
@@ -69,12 +62,14 @@
 }
 
 .hero-right {
-  width: 100%;
-  /* Allocate 60% of the width to model */
+  width: 70%;
+  /* Allocate 70% of the width to model */
   height: 100vh;
-  position: absolute;
   z-index: 5;
   /* Lower z-index so model covers text when zoomed in */
+  display: flex;
+  justify-content: flex-end;
+  /* Ensures the content in .hero-right aligns to the right */
 }
 
 canvas {
