--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -31,6 +31,10 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  background: url("/assets/pexels-apasaric-1694000.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .hero-left {
