--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -7,6 +7,10 @@
   /* background-color: blue; */
   margin-bottom: 5rem;
   height: 80vh;
+  background: url("/assets/pexels-apasaric-1694000.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header {
