--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -61,3 +61,45 @@
   background-color: #e2e2e2;
   color: #390756;
 }
+/* Hamburger Menu Icon */
+.menu-toggle {
+  display: none;
+  font-size: 2rem;
+  color: #e2e2e2;
+  cursor: pointer;
+}
+
+/* Responsive Styles for Screens Smaller than 768px */
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    background-color: #390756;
+    width: 100vw;
+    align-items: center;
+  }
+
+  .nav-links.open {
+    display: flex; 
+  }
+
+  .menu-toggle {
+    display: block; 
+  }
+
+  .navbar {
+    justify-content: space-between;
+  }
+
+  .nav-right {
+    margin-left: auto;
+  }
+
+  .nav-links a {
+    font-size: 1.2rem;
+    margin: 1rem 0;
+  }
+}
