--- a/src/styles/Sponser.css
+++ b/src/styles/Sponser.css
@@ -1,6 +1,6 @@
 .sponser {
     background-color: black;
-    color: #B026FF;
+    color: white;
     text-align: center;
     padding-top: 8%;
     background: url("/assets/pexels-apasaric-1694000.jpg");
