--- a/src/styles/Person.css
+++ b/src/styles/Person.css
@@ -73,4 +73,8 @@
   .container .box:hover .imgBox {
     transform: translate(0, -3.5rem);
   }
+  .imgBox img{
+    width: 10rem;
+    height: 10rem;
+  }
 }
