--- a/src/styles/Person.css
+++ b/src/styles/Person.css
@@ -1,12 +1,16 @@
+/* Main Container */
 .container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap; /* Allows the boxes to wrap on smaller screens */
 }
+
 .container .box {
   position: relative;
   width: 20rem;
   height: 20rem;
   margin: 4rem;
+  transition: transform 0.3s ease-in-out; /* Add a slight transition to the box itself */
 }
 
 .container .box:hover .imgBox {
@@ -17,6 +21,7 @@
   transform: translate(.5rem, 3rem);
 }
 
+/* Image Box */
 .imgBox {
   position: absolute;
   top: 0;
@@ -24,7 +29,7 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-  transition: all 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out; /* Smooth transition for the hover effect */
 }
 
 .imgBox img {
@@ -32,8 +37,10 @@
   height: 20rem;
   object-fit: cover;
   resize: both;
+  transition: transform 0.5s ease-in-out; /* Smooth resizing */
 }
 
+/* Person Content */
 .person-content {
   position: absolute;
   bottom: 0;
@@ -47,11 +54,10 @@
   z-index: 1;
   align-items: flex-end;
   text-align: center;
-  transition: 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
 .person-content h2 {
-  display: block;
   font-size: 2rem;
   color: #111;
   font-weight: 500;
@@ -66,15 +72,36 @@
   letter-spacing: 2px;
 }
 
+/* Responsive Design for Smaller Screens */
 @media (max-width: 600px) {
+  /* Adjusting hover effect on small screens */
   .container .box:hover .person-content {
     transform: translate(0, 3.5rem);
   }
+  
   .container .box:hover .imgBox {
     transform: translate(0, -3.5rem);
   }
-  .imgBox img{
+
+  /* Resize image box */
+  .imgBox img {
     width: 10rem;
     height: 10rem;
+  }
+
+  /* Box size scaling */
+  .container .box {
+    width: 12rem;
+    height: 12rem;
+    margin: 2rem;
+  }
+
+  /* Text scaling */
+  .person-content h2 {
+    font-size: 1.5rem;
+  }
+
+  .person-content span {
+    font-size: 1.2rem;
   }
 }
