--- a/src/styles/Sponser.css
+++ b/src/styles/Sponser.css
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-direction: column; /* For mobile-first, start with column */
+    flex-direction: column; 
     padding: 2rem 0;
 }
 
@@ -31,7 +31,7 @@ section {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap; /* Allows wrapping on smaller screens */
+    flex-direction: row;
     margin: 2rem auto;
 }
 
@@ -49,6 +49,7 @@ section {
 
     section {
         flex-direction: column; /* Stack sections on smaller screens */
+        flex-wrap: wrap;
     }
 }
 
@@ -68,5 +69,6 @@ section {
 
     section {
         margin: 1.5rem auto;
+        flex-wrap: wrap;
     }
 }
